added chat history

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 
@@ -32,9 +33,11 @@
     transform: rotate(360deg);
   }
 }
-
-.form-container, .big-container {
-  max-width: 35rem;
+body {
+  background-color: #282c34;
+}
+.form-container, .big-container, .monitoring-container {
+  width: 35rem;
   margin: 2rem auto;
   padding: 1rem;
   background-color: slategray;
@@ -83,4 +86,88 @@
 .result-box {
   color: black;
   font-weight: bold;
+}
+.header {
+  color: #7ae582;
+}
+
+.tot-container {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+}
+
+.tab-container {
+  display: flex;
+  justify-content: space-around; /* Adjust as needed */
+  padding: 1%; /* Add padding for spacing */
+  width: 30rem;
+
+}
+
+
+#form-button, #monitoring-button {
+  flex: 1; /* Make both buttons take equal width */
+  padding: 15px; /* Add padding for better visual appearance */
+  border: none;
+  cursor: pointer;
+  background-color: rgb(192, 192, 186); /* Add background color */
+  font-size: 15px; /* Adjust the font size */
+  /* Add other styling properties as needed */
+}
+
+
+.active-tab {
+  /* Add styles for the active tab */
+  font-weight: bold;
+  color: #333;
+  background-color: #ddd;
+}
+
+
+#modelDropDown {
+  padding: .5rem;
+  background-color: #F3F3F3;
+  font-weight: 500;
+}
+
+.ans-container {
+  background-color: aliceblue;
+  padding: 1rem;
+  border-radius: 2rem;
+}
+
+.title-monitor {
+  text-align: center;
+  color: #1a1b1e;
+}
+
+.chat-history-container {
+  width: 35rem;
+  margin: 2rem auto;
+  padding: 1rem;
+  background-color: rgb(184, 158, 158);
+  border-radius: 0.5rem;
+  box-shadow: 0 25px -12px rgba(0,0,0,0.25);
+}
+
+.chat-history-container h2 {
+  color: white;
+ 
+}
+
+.chat-history-container ul {
+  list-style-type: none;
+  
+}
+
+.chat-history-container li {
+  margin-bottom: 20px;
+  
+}
+
+h4 {
+  text-align: center;
+  color: white;
 }
